name:                habp-site
version:             0.1.0.0
synopsis:            W8UPD HABP Site
-- description:
homepage:            http://habp.w8upd.org/
license:             MIT
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2014 Ricky Elrod
copyright:           (c) 2014 Jimmy Carter
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable habpsite
  main-is: site.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.5 && < 4.7
    , hakyll >= 4.4.2.0
    , pandoc >= 1.12.2.1
    , time >= 1.4
    , transformers >= 0.3
  -- hs-source-dirs:
  default-language: Haskell2010

test-suite hlint
  main-is: hlint.hs
  type: exitcode-stdio-1.0
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , hlint >= 1.7
